--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 <body>
     <main>
     <h1>Bienvenides a la Calculadora de propinas y algo más</h1>
-    
+    <div style="width:100%;height:0;padding-bottom:100%;position:relative;">
+        <iframe src="https://giphy.com/embed/3o6gDWzmAzrpi5DQU8" width="30%" height="auto" frameBorder="0" ></iframe>
+    </div>
+   
     </main>
     <script src="./js/objetotip.js"></script>
     <script src="./js/tips.js"></script>
